--- a/encryptTugas/package.json
+++ b/encryptTugas/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "crypto-js": "^4.2.0",
+    "express": "^4.18.2",
+    "moment": "^2.29.4"
   }
 }
